--- a/app/src/main/res/layout/activity_cuurency_list.xml
+++ b/app/src/main/res/layout/activity_cuurency_list.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
 <data>
     <variable
         name="viewModel"
-        type="mk.android.com.livecurrencyconvertor.ui.post.CurrencyLiveViewModel" />
+        type="mk.android.com.livecurrencyconvertor.ui.post.CurrencyListViewModel" />
 </data>
 <android.support.constraint.ConstraintLayout
     android:layout_width="match_parent"
@@ -24,6 +24,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto">
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:adapter="@{viewModel.getCurrencyListAdapter()}"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
